några saker fixart